Corregidos unos pequeños detalles

--- a/despacho-42.html
+++ b/despacho-42.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Aplicaciones - IA al día</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
@@ -61,7 +61,7 @@
 				</header>
 
 				<h3 class="article__h3">Cinco reflexiones sobre el impacto de la inteligencia artificial en el mundo del arte</h3>
-	
+
 				<p class="article__paragraph">En el marco de este episodio del podcast Despacho 42, el profesor Andrés Burbano reflexiona sobre varios aspectos relacionados con la inteligencia artificial y el mundo del arte. A continuación recopilamos algunas de las reflexiones más interesantes del episodio.</p>
 
 				<ol class="article__ol">
